--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     padding: 0;
 }
 
-
 body {
     font-family: 'Space Mono', monospace;
     background-color: #111111;
@@ -25,6 +24,29 @@ h1 {
 
 h2 {
     text-align: center;
+}
+
+#load-btn{
+    font-family: 'Space Mono', monospace;
+    display: block;
+    text-align: center;
+    color: white;
+    padding: 0.5em;
+    margin: 0 auto;
+    background-color: #222222;
+    border: 1px solid #222222;
+    border-radius: 1em;
+    width: var(--card-width);
+}
+
+#load-btn:hover {
+box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+transform: translateY(-2px);
+}
+
+#load-btn:active {
+box-shadow: none;
+transform: translateY(0);
 }
 
 .flexy {
