--- a/style.css
+++ b/style.css
@@ -33,14 +33,13 @@ h2 {
     color: white;
     padding: 0.5em;
     margin: 0 auto;
-    background-color: #222222;
-    border: 1px solid #222222;
-    border-radius: 1em;
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(34,34,34,255) 20%, rgba(34,34,34,255) 80%, rgba(0,0,0,0) 100%);
+    border: none;
     width: var(--card-width);
 }
 
 #load-btn:hover {
-box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+filter: drop-shadow(0px 8px 15px rgba(0, 0, 0, 0.25));
 transform: translateY(-2px);
 }
 
