--- a/style.css
+++ b/style.css
@@ -26,6 +26,15 @@ h2 {
     text-align: center;
 }
 
+a {
+    transition: transform .2s ease-in-out;
+    display: inline-block;
+}
+
+a:hover{
+    transform: translateX(1em);
+}
+
 #load-btn{
     font-family: 'Space Mono', monospace;
     display: block;
@@ -39,13 +48,13 @@ h2 {
 }
 
 #load-btn:hover {
-filter: drop-shadow(0px 8px 15px rgba(0, 0, 0, 0.25));
-transform: translateY(-2px);
+    filter: drop-shadow(0px 8px 15px rgba(0, 0, 0, 0.25));
+    transform: translateY(-2px);
 }
 
 #load-btn:active {
-box-shadow: none;
-transform: translateY(0);
+    box-shadow: none;
+    transform: translateY(0);
 }
 
 .flexy {
